; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_hid_joypad.c_hid_joypad_get_buttons.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_hid_joypad.c_hid_joypad_get_buttons.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i8*, i32, i32*)* }

@generic_hid = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @hid_joypad_get_buttons to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hid_joypad_get_buttons(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @generic_hid, align 8
  %6 = icmp ne %struct.TYPE_2__* %5, null
  br i1 %6, label %7, label %21

7:                                                ; preds = %2
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @generic_hid, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32 (i8*, i32, i32*)*, i32 (i8*, i32, i32*)** %9, align 8
  %11 = icmp ne i32 (i8*, i32, i32*)* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %7
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @generic_hid, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32 (i8*, i32, i32*)*, i32 (i8*, i32, i32*)** %14, align 8
  %16 = call i64 (...) @hid_driver_get_data()
  %17 = inttoptr i64 %16 to i8*
  %18 = load i32, i32* %3, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 %15(i8* %17, i32 %18, i32* %19)
  br label %24

21:                                               ; preds = %7, %2
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @BIT256_CLEAR_ALL_PTR(i32* %22)
  br label %24

24:                                               ; preds = %21, %12
  ret void
}

declare dso_local i64 @hid_driver_get_data(...) #1

declare dso_local i32 @BIT256_CLEAR_ALL_PTR(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
